userdetails 에서도 똑같이 동작하도로 설정 파일 수정

--- a/server/login-userdetails/build.gradle
+++ b/server/login-userdetails/build.gradle
@@ -1,6 +1,11 @@
 
+apply from: "../web-common.gradle"
 
 dependencies {
+
+    // user와 authority 객체 정의
+    compile project(":web-user-admin")
+    compile project(":comp-user-admin")
 
 }
 
