--- a/server/login-basic/src/main/resources/application.yml
+++ b/server/login-basic/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
       enabled: true
     restart:
       enabled: true
+
+  thymeleaf:
+    prefix: classpath:/template/
+    cache: false
+    check-template-location: true
